tests/baselines/reference/parserIndexSignature9.errors.txt
==== tests/cases/compiler/parserIndexSignature9.ts (1 errors) ====
    interface I {
       []: number
       ~
!!! parserIndexSignature9.ts(2,4): error TS1095: Index signature must have exactly one parameter.
    }